2017-01-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* util/gpgmeutils.c, util/gpgmeutils.h: New. Moved here from
	openvas-libraries. Reduced to only offer gvm_init_gpgme_ctx_from_dir().

	* util/CMakeLists.txt: Handle new module "gpgmeutils". Check for
	gpgme library.

	* INSTALL: Add gpgme library as dependency.

2017-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/hosts.c, base/hosts.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "hosts".

2017-01-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Fix broken conditional for GVM_SYSCONF_DIR.

2017-01-03  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* CMakeLists.txt: Set GVM_SYSCONF_DIR.

	* base/CMakeLists.txt: Add definition of GVM_SYSCONF_DIR.

2017-01-03  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/pwpolicy.c (search_file): Reduce scope of len.

2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/pwpolicy.c, base/pwpolicy.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "pwpolicy". Add
	definition for GVM_SYSCONF_DIR.

2017-01-02  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/nvti.c (nvti_from_keyfile): Reduce scope of keys and i.

2017-01-02  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/drop_privileges.c (drop_privileges): Reduce scope of user_pw.

2017-01-02  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/credentials.c, base/credentials.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "credentials".

2017-01-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/drop_privileges.c, base/drop_privileges.h: New. Moved here from
	openvas-libraries.

	* base/CMakeLists.txt: Handle new module "drop_privileges".

2016-12-28  Michael Wiegand <michael.wiegand@greenbone.net>

	Move dependency checks and relevant configuration and installation